[project]
name = "pylox"
version = "1.0.0"
description = "Lox interpreter in python"
readme = "README.rst"
dependencies = [
]


[project.optional-dependencies]
test = ["pytest"]
# add pytest-coverage

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

